# LLM_ChatBot_Llama3

./: .gitignore  README.md  config.py  main.py  main2.py
multi-agent-mcp/: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  CAPACITY_SUMMARY.md  CHANGELOG.md  CHANGELOG_v3.0.2.md  CONCURRENCY.md  DATADOG_METRICS_GUIDE.md  DATADOG_SETUP.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  DOCKER_IMAGE_TAR.md  DOCKER_README.md  Dockerfile  MCP_SERVER.md  NETWORK_TROUBLESHOOTING.md  PAGERDUTY_SETUP.md  PRESENTATION_NOTES.md  PRESENTATION_NOTES_EN.md  PRESENTATION_README.md  PRESENTATION_SPEECH.md  PRESENTATION_SPEECH_EN.md  QUICK_START.md  README.md  SETUP_MCP.md  SPLUNK_TROUBLESHOOTING.md  SQL_CONSOLE_GUIDE.md  STATUS_MONITOR_CONFIG.md  VM_QUICK_FIX.md  app.py  app1.py  app_fine.py  chrome-extension.crx  chrome-extension.pem  claude_desktop_config.json  config.py  debug_metrics.py  deployments.json  docker-build-export.sh  (+23 more)
multi-agent-mcp/chrome-extension/: main.py  manifest.json  popup.html  popup.js  styles.css
multi-agent-mcp/examples/: api_client_example.py
multi-agent-mcp/static/: search_history.json
multi-agent-mcp/templates/: about.html  help.html  index.html  settings.html  sql_console.html  statusmonitor.html
multi-agent-mcp/tools/: ask_arlochat.py  ask_copilot.py  bedrock_tool.py  confluence_tool.py  datadog_connect.py  datadog_dashboards.py  deployments_calendar.py  gemini_tool.py  grafana_dashboards.py  history_tool.py  llama_tool.py  metrics_persistence.py  noc_kt.py  oncall_support.py  pagerduty_analytics.py  pagerduty_insights.py  pagerduty_tool.py  (+9 more)
(+6 files in other folders)
